message-service-api/src/main/java/com/example/messageservice/error/ApiErrorResponse.java
package com.example.messageservice.error;

import lombok.Builder;
import lombok.Data;

@Builder
@Data
public class ApiErrorResponse {
    private String error;
    private String message;
}
